src/Qafny/Syntax/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_runParser -> AST                            (0)
	AST -> toplevels                                   (1)
	toplevels -> many__toplevel__                      (2)
	toplevel -> dafny                                  (3)
	toplevel -> "method" id '(' bindings ')' "returns" '(' bindings ')' conds opt__block__   (4)
	toplevel -> "method" id '(' bindings ')' conds opt__block__   (5)
	conds -> many__cond__                              (6)
	cond -> "requires" expr                            (7)
	cond -> "ensures" expr                             (8)
	cond -> "invariant" expr                           (9)
	cond -> "separates" partition                      (10)
	bindings -> manyComma__binding__                   (11)
	binding -> id ':' ty                               (12)
	ty -> "nat"                                        (13)
	ty -> "int"                                        (14)
	ty -> "bool"                                       (15)
	ty -> "seq" '<' ty '>'                             (16)
	ty -> "qreg" '[' digits ']'                        (17)
	ty -> "qreg" '[' id ']'                            (18)
	qty -> "nor"                                       (19)
	qty -> "had"                                       (20)
	qty -> "en"                                        (21)
	qty -> "en01"                                      (22)
	block -> '{' stmts '}'                             (23)
	stmts -> many__stmt__                              (24)
	stmt -> dafny                                      (25)
	stmt -> "assert" expr ';'                          (26)
	stmt -> "var" binding ';'                          (27)
	stmt -> "var" binding ":=" expr ';'                (28)
	stmt -> id ":=" expr ';'                           (29)
	stmt -> partition "*=" expr ';'                    (30)
	stmt -> "if" '(' guardExpr ')' cond block          (31)
	stmt -> "for" id "in" '[' expr ".." expr ']' "with" guardExpr conds block   (32)
	stmt -> id tuple__expr__ ';'                       (33)
	splitAt -> "split" "at" expr                       (34)
	guardExpr -> partition opt__splitAt__              (35)
	partition -> manyComma__range__                    (36)
	range -> id '[' expr ".." expr ']'                 (37)
	spec -> '{' partition ':' qty "↦" tuple__qspec__ '}'   (38)
	spec -> '{' partition ':' qty "↦" qspec '}'        (39)
	qspec -> "Σ" id "∈" '[' expr ".." expr ']' '.' pspec basis__expr__   (40)
	qspec -> "Σ" id "∈" '[' expr ".." expr ']' '.' pspec "⊗" id "∈" '[' expr ".." expr ']' '.' basis__expr__   (41)
	qspec -> '_'                                       (42)
	pspec ->                                           (43)
	pspec -> "ω" '(' expr ',' expr ')' '~'             (44)
	pspec -> "Ω" id "∈" '[' expr ".." expr ']' '.' '(' expr ',' expr ')' '~'   (45)
	pbinder -> '_'                                     (46)
	pbinder -> "ω" '(' id ',' id ')'                   (47)
	pbinder -> "Ω" id "∈" '[' expr ".." expr ']' '.' '(' id ',' id ')'   (48)
	expr -> atomic                                     (49)
	expr -> '_'                                        (50)
	expr -> spec                                       (51)
	expr -> '{' partition '}'                          (52)
	expr -> qops                                       (53)
	expr -> "meas" id                                  (54)
	expr -> "not" atomic                               (55)
	expr -> "nor" '(' atomic ',' digits ')'            (56)
	expr -> "λ" '(' id "=>" expr ')'                   (57)
	expr -> "λ" '(' pbinder '~' id "=>" pspec expr ')'   (58)
	expr -> id tuple__expr__                           (59)
	expr -> "repr" '(' range ')'                       (60)
	expr -> logicOrExp                                 (61)
	qops -> "H"                                        (62)
	qops -> "QFT"                                      (63)
	qops -> "RQFT"                                     (64)
	logicOrExp -> logicAndExp "||" logicOrExp          (65)
	logicOrExp -> logicAndExp                          (66)
	logicAndExp -> cmpExpr "&&" logicAndExp            (67)
	logicAndExp -> cmpExpr                             (68)
	cmpExpr -> arithExpr cmp arithExpr                 (69)
	cmp -> '>'                                         (70)
	cmp -> '<'                                         (71)
	cmp -> ">="                                        (72)
	cmp -> "<="                                        (73)
	cmp -> "=="                                        (74)
	arithExpr -> atomic arith arithExpr                (75)
	arithExpr -> atomic                                (76)
	arith -> '+'                                       (77)
	arith -> '-'                                       (78)
	arith -> '*'                                       (79)
	arith -> '\%'                                      (80)
	atomic -> digits                                   (81)
	atomic -> id                                       (82)
	atomic -> '(' expr ')'                             (83)
	basis__expr__ -> '|' manyComma__expr__ "⟩"         (84)
	many__cond__ ->                                    (85)
	many__cond__ -> cond many__cond__                  (86)
	many__stmt__ ->                                    (87)
	many__stmt__ -> stmt many__stmt__                  (88)
	many__toplevel__ ->                                (89)
	many__toplevel__ -> toplevel many__toplevel__      (90)
	manyComma__binding__ ->                            (91)
	manyComma__binding__ -> binding ',' manyComma__binding__   (92)
	manyComma__range__ ->                              (93)
	manyComma__range__ -> range ',' manyComma__range__   (94)
	opt__block__ ->                                    (95)
	opt__block__ -> block                              (96)
	opt__splitAt__ ->                                  (97)
	opt__splitAt__ -> splitAt                          (98)
	tuple__expr__ -> '(' manyComma__expr__ ')'         (99)
	tuple__qspec__ -> '(' manyComma__qspec__ ')'       (100)
	manyComma__expr__ ->                               (101)
	manyComma__expr__ -> expr ',' manyComma__expr__    (102)
	manyComma__qspec__ ->                              (103)
	manyComma__qspec__ -> qspec ',' manyComma__qspec__   (104)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	digits         { ( _, L.TLitInt $$ ) }
	dafny          { ( _, L.TDafny $$  ) }
	"method"       { ( _, L.TMethod    ) }
	"ensures"      { ( _, L.TEnsures   ) }
	"requires"     { ( _, L.TRequires  ) }
	"separates"    { ( _, L.TSeparates ) }
	"invariant"    { ( _, L.TInv       ) }
	"with"         { ( _, L.TWith      ) }
	"at"           { ( _, L.TAt      ) }
	"split"        { ( _, L.TSplit      ) }
	"for"          { ( _, L.TFor       ) }
	"returns"      { ( _, L.TReturns   ) }
	"not"          { ( _, L.TNot       ) }
	"nat"          { ( _, L.TNat       ) }
	"int"          { ( _, L.TInt       ) }
	"in"           { ( _, L.TIn        ) }
	"bool"         { ( _, L.TBool      ) }
	"seq"          { ( _, L.TSeq       ) }
	"nor"          { ( _, L.TNor       ) }
	"had"          { ( _, L.THad       ) }
	"H"            { ( _, L.THApp      ) }
	"QFT"          { ( _, L.TQFT       ) }
	"RQFT"         { ( _, L.TRQFT      ) }
	"repr"         { ( _, L.TRepr      ) }
	"meas"         { ( _, L.TMea       ) }
	"en"           { ( _, L.TEN        ) }
	"qreg"         { ( _, L.TQReg      ) }
	"en01"         { ( _, L.TEN01      ) }
	"var"          { ( _, L.TVar       ) }
	"if"           { ( _, L.TIf        ) }
	"λ"            { ( _, L.TCl        ) }
	"Σ"            { ( _, L.TUnicodeSum    ) }
	"⊗"            { ( _, L.TUnicodeTensor ) }
	"ω"            { ( _, L.TUnicodeOmega ) }
	"Ω"            { ( _, L.TUnicodeSumOmega ) }
	"∈"            { ( _, L.TUnicodeIn     ) }
	"↦"            { ( _, L.TUnicodeMap    ) }
	"assert"       { ( _, L.TAssert    ) }
	"||"           { ( _, L.TOr        ) }
	"&&"           { ( _, L.TAnd       ) }
	'+'            { ( _, L.TAdd       ) }
	'-'            { ( _, L.TSub       ) }
	'*'            { ( _, L.TMul       ) }
	'\%'           { ( _, L.TMod       ) }
	'|'            { ( _, L.TBar       ) }
	'('            { ( _, L.TLPar      ) }
	')'            { ( _, L.TRPar      ) }
	'<'            { ( _, L.TLAng      ) }
	'>'            { ( _, L.TRAng      ) }
	"⟩"            { ( _, L.TRAngA     ) }
	'['            { ( _, L.TLBracket  ) }
	']'            { ( _, L.TRBracket  ) }
	'{'            { ( _, L.TLBrace    ) }
	'}'            { ( _, L.TRBrace    ) }
	id             { ( _, L.TId $$     ) }
	'_'            { ( _, L.TWildcard  ) }
	','            { ( _, L.TComma     ) }
	':'            { ( _, L.TColon     ) }
	'.'            { ( _, L.TDot       ) }
	';'            { ( _, L.TSemi      ) }
	"=="           { ( _, L.TEq        ) }
	"=>"           { ( _, L.TArrow     ) }
	">="           { ( _, L.TGe        ) }
	"<="           { ( _, L.TLe        ) }
	":="           { ( _, L.TAssign    ) }
	"*="           { ( _, L.TApply     ) }
	".."           { ( _, L.TDots      ) }
	'~'            { ( _, L.TTilde     ) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_runParser rule  0
	AST             rule  1
	toplevels       rule  2
	toplevel        rules 3, 4, 5
	conds           rule  6
	cond            rules 7, 8, 9, 10
	bindings        rule  11
	binding         rule  12
	ty              rules 13, 14, 15, 16, 17, 18
	qty             rules 19, 20, 21, 22
	block           rule  23
	stmts           rule  24
	stmt            rules 25, 26, 27, 28, 29, 30, 31, 32, 33
	splitAt         rule  34
	guardExpr       rule  35
	partition       rule  36
	range           rule  37
	spec            rules 38, 39
	qspec           rules 40, 41, 42
	pspec           rules 43, 44, 45
	pbinder         rules 46, 47, 48
	expr            rules 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61
	qops            rules 62, 63, 64
	logicOrExp      rules 65, 66
	logicAndExp     rules 67, 68
	cmpExpr         rule  69
	cmp             rules 70, 71, 72, 73, 74
	arithExpr       rules 75, 76
	arith           rules 77, 78, 79, 80
	atomic          rules 81, 82, 83
	basis__expr__   rule  84
	many__cond__    rules 85, 86
	many__stmt__    rules 87, 88
	many__toplevel__ rules 89, 90
	manyComma__binding__ rules 91, 92
	manyComma__range__ rules 93, 94
	opt__block__    rules 95, 96
	opt__splitAt__  rules 97, 98
	tuple__expr__   rule  99
	tuple__qspec__  rule  100
	manyComma__expr__ rules 101, 102
	manyComma__qspec__ rules 103, 104

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_runParser -> . AST                           (rule 0)

	dafny          shift, and enter state 5
	"method"       shift, and enter state 6
	%eof           reduce using rule 89

	AST            goto state 7
	toplevels      goto state 2
	toplevel       goto state 3
	many__toplevel__goto state 4

State 1

	AST -> . toplevels                                  (rule 1)

	dafny          shift, and enter state 5
	"method"       shift, and enter state 6

	toplevels      goto state 2
	toplevel       goto state 3
	many__toplevel__goto state 4

State 2

	AST -> toplevels .                                  (rule 1)

	%eof           reduce using rule 1


State 3

	many__toplevel__ -> toplevel . many__toplevel__     (rule 90)

	dafny          shift, and enter state 5
	"method"       shift, and enter state 6
	%eof           reduce using rule 89

	toplevel       goto state 3
	many__toplevel__goto state 9

State 4

	toplevels -> many__toplevel__ .                     (rule 2)

	%eof           reduce using rule 2


State 5

	toplevel -> dafny .                                 (rule 3)

	dafny          reduce using rule 3
	"method"       reduce using rule 3
	%eof           reduce using rule 3


State 6

	toplevel -> "method" . id '(' bindings ')' "returns" '(' bindings ')' conds opt__block__    (rule 4)
	toplevel -> "method" . id '(' bindings ')' conds opt__block__    (rule 5)

	id             shift, and enter state 8


State 7

	%start_runParser -> AST .                           (rule 0)

	%eof           accept


State 8

	toplevel -> "method" id . '(' bindings ')' "returns" '(' bindings ')' conds opt__block__    (rule 4)
	toplevel -> "method" id . '(' bindings ')' conds opt__block__    (rule 5)

	'('            shift, and enter state 10


State 9

	many__toplevel__ -> toplevel many__toplevel__ .     (rule 90)

	%eof           reduce using rule 90


State 10

	toplevel -> "method" id '(' . bindings ')' "returns" '(' bindings ')' conds opt__block__    (rule 4)
	toplevel -> "method" id '(' . bindings ')' conds opt__block__    (rule 5)

	')'            reduce using rule 91
	id             shift, and enter state 14

	bindings       goto state 11
	binding        goto state 12
	manyComma__binding__goto state 13

State 11

	toplevel -> "method" id '(' bindings . ')' "returns" '(' bindings ')' conds opt__block__    (rule 4)
	toplevel -> "method" id '(' bindings . ')' conds opt__block__    (rule 5)

	')'            shift, and enter state 17


State 12

	manyComma__binding__ -> binding . ',' manyComma__binding__    (rule 92)

	','            shift, and enter state 16


State 13

	bindings -> manyComma__binding__ .                  (rule 11)

	')'            reduce using rule 11


State 14

	binding -> id . ':' ty                              (rule 12)

	':'            shift, and enter state 15


State 15

	binding -> id ':' . ty                              (rule 12)

	"nat"          shift, and enter state 28
	"int"          shift, and enter state 29
	"bool"         shift, and enter state 30
	"seq"          shift, and enter state 31
	"qreg"         shift, and enter state 32

	ty             goto state 27

State 16

	manyComma__binding__ -> binding ',' . manyComma__binding__    (rule 92)

	')'            reduce using rule 91
	id             shift, and enter state 14

	binding        goto state 12
	manyComma__binding__goto state 26

State 17

	toplevel -> "method" id '(' bindings ')' . "returns" '(' bindings ')' conds opt__block__    (rule 4)
	toplevel -> "method" id '(' bindings ')' . conds opt__block__    (rule 5)

	dafny          reduce using rule 85
	"method"       reduce using rule 85
	"ensures"      shift, and enter state 21
	"requires"     shift, and enter state 22
	"separates"    shift, and enter state 23
	"invariant"    shift, and enter state 24
	"returns"      shift, and enter state 25
	'{'            reduce using rule 85
	%eof           reduce using rule 85

	conds          goto state 18
	cond           goto state 19
	many__cond__   goto state 20

State 18

	toplevel -> "method" id '(' bindings ')' conds . opt__block__    (rule 5)

	dafny          reduce using rule 95
	"method"       reduce using rule 95
	'{'            shift, and enter state 66
	%eof           reduce using rule 95

	block          goto state 64
	opt__block__   goto state 65

State 19

	many__cond__ -> cond . many__cond__                 (rule 86)

	dafny          reduce using rule 85
	"method"       reduce using rule 85
	"ensures"      shift, and enter state 21
	"requires"     shift, and enter state 22
	"separates"    shift, and enter state 23
	"invariant"    shift, and enter state 24
	'{'            reduce using rule 85
	%eof           reduce using rule 85

	cond           goto state 19
	many__cond__   goto state 63

State 20

	conds -> many__cond__ .                             (rule 6)

	dafny          reduce using rule 6
	"method"       reduce using rule 6
	'{'            reduce using rule 6
	%eof           reduce using rule 6


State 21

	cond -> "ensures" . expr                            (rule 8)

	digits         shift, and enter state 44
	"not"          shift, and enter state 45
	"nor"          shift, and enter state 46
	"H"            shift, and enter state 47
	"QFT"          shift, and enter state 48
	"RQFT"         shift, and enter state 49
	"repr"         shift, and enter state 50
	"meas"         shift, and enter state 51
	"λ"            shift, and enter state 52
	'('            shift, and enter state 53
	'{'            shift, and enter state 54
	id             shift, and enter state 55
	'_'            shift, and enter state 56

	spec           goto state 36
	expr           goto state 62
	qops           goto state 38
	logicOrExp     goto state 39
	logicAndExp    goto state 40
	cmpExpr        goto state 41
	arithExpr      goto state 42
	atomic         goto state 43

State 22

	cond -> "requires" . expr                           (rule 7)

	digits         shift, and enter state 44
	"not"          shift, and enter state 45
	"nor"          shift, and enter state 46
	"H"            shift, and enter state 47
	"QFT"          shift, and enter state 48
	"RQFT"         shift, and enter state 49
	"repr"         shift, and enter state 50
	"meas"         shift, and enter state 51
	"λ"            shift, and enter state 52
	'('            shift, and enter state 53
	'{'            shift, and enter state 54
	id             shift, and enter state 55
	'_'            shift, and enter state 56

	spec           goto state 36
	expr           goto state 61
	qops           goto state 38
	logicOrExp     goto state 39
	logicAndExp    goto state 40
	cmpExpr        goto state 41
	arithExpr      goto state 42
	atomic         goto state 43

State 23

	cond -> "separates" . partition                     (rule 10)

	dafny          reduce using rule 93
	"method"       reduce using rule 93
	"ensures"      reduce using rule 93
	"requires"     reduce using rule 93
	"separates"    reduce using rule 93
	"invariant"    reduce using rule 93
	'{'            reduce using rule 93
	id             shift, and enter state 60
	%eof           reduce using rule 93

	partition      goto state 57
	range          goto state 58
	manyComma__range__goto state 59

State 24

	cond -> "invariant" . expr                          (rule 9)

	digits         shift, and enter state 44
	"not"          shift, and enter state 45
	"nor"          shift, and enter state 46
	"H"            shift, and enter state 47
	"QFT"          shift, and enter state 48
	"RQFT"         shift, and enter state 49
	"repr"         shift, and enter state 50
	"meas"         shift, and enter state 51
	"λ"            shift, and enter state 52
	'('            shift, and enter state 53
	'{'            shift, and enter state 54
	id             shift, and enter state 55
	'_'            shift, and enter state 56

	spec           goto state 36
	expr           goto state 37
	qops           goto state 38
	logicOrExp     goto state 39
	logicAndExp    goto state 40
	cmpExpr        goto state 41
	arithExpr      goto state 42
	atomic         goto state 43

State 25

	toplevel -> "method" id '(' bindings ')' "returns" . '(' bindings ')' conds opt__block__    (rule 4)

	'('            shift, and enter state 35


State 26

	manyComma__binding__ -> binding ',' manyComma__binding__ .    (rule 92)

	')'            reduce using rule 92


State 27

	binding -> id ':' ty .                              (rule 12)

	','            reduce using rule 12
	';'            reduce using rule 12
	":="           reduce using rule 12


State 28

	ty -> "nat" .                                       (rule 13)

	'>'            reduce using rule 13
	','            reduce using rule 13
	';'            reduce using rule 13
	":="           reduce using rule 13


State 29

	ty -> "int" .                                       (rule 14)

	'>'            reduce using rule 14
	','            reduce using rule 14
	';'            reduce using rule 14
	":="           reduce using rule 14


State 30

	ty -> "bool" .                                      (rule 15)

	'>'            reduce using rule 15
	','            reduce using rule 15
	';'            reduce using rule 15
	":="           reduce using rule 15


State 31

	ty -> "seq" . '<' ty '>'                            (rule 16)

	'<'            shift, and enter state 34


State 32

	ty -> "qreg" . '[' digits ']'                       (rule 17)
	ty -> "qreg" . '[' id ']'                           (rule 18)

	'['            shift, and enter state 33


State 33

	ty -> "qreg" '[' . digits ']'                       (rule 17)
	ty -> "qreg" '[' . id ']'                           (rule 18)

	digits         shift, and enter state 104
	id             shift, and enter state 105


State 34

	ty -> "seq" '<' . ty '>'                            (rule 16)

	"nat"          shift, and enter state 28
	"int"          shift, and enter state 29
	"bool"         shift, and enter state 30
	"seq"          shift, and enter state 31
	"qreg"         shift, and enter state 32

	ty             goto state 103

State 35

	toplevel -> "method" id '(' bindings ')' "returns" '(' . bindings ')' conds opt__block__    (rule 4)

	')'            reduce using rule 91
	id             shift, and enter state 14

	bindings       goto state 102
	binding        goto state 12
	manyComma__binding__goto state 13

State 36

	expr -> spec .                                      (rule 51)

	dafny          reduce using rule 51
	"method"       reduce using rule 51
	"ensures"      reduce using rule 51
	"requires"     reduce using rule 51
	"separates"    reduce using rule 51
	"invariant"    reduce using rule 51
	')'            reduce using rule 51
	']'            reduce using rule 51
	'{'            reduce using rule 51
	','            reduce using rule 51
	';'            reduce using rule 51
	".."           reduce using rule 51
	%eof           reduce using rule 51


State 37

	cond -> "invariant" expr .                          (rule 9)

	dafny          reduce using rule 9
	"method"       reduce using rule 9
	"ensures"      reduce using rule 9
	"requires"     reduce using rule 9
	"separates"    reduce using rule 9
	"invariant"    reduce using rule 9
	'{'            reduce using rule 9
	%eof           reduce using rule 9


State 38

	expr -> qops .                                      (rule 53)

	dafny          reduce using rule 53
	"method"       reduce using rule 53
	"ensures"      reduce using rule 53
	"requires"     reduce using rule 53
	"separates"    reduce using rule 53
	"invariant"    reduce using rule 53
	')'            reduce using rule 53
	']'            reduce using rule 53
	'{'            reduce using rule 53
	','            reduce using rule 53
	';'            reduce using rule 53
	".."           reduce using rule 53
	%eof           reduce using rule 53


State 39

	expr -> logicOrExp .                                (rule 61)

	dafny          reduce using rule 61
	"method"       reduce using rule 61
	"ensures"      reduce using rule 61
	"requires"     reduce using rule 61
	"separates"    reduce using rule 61
	"invariant"    reduce using rule 61
	')'            reduce using rule 61
	']'            reduce using rule 61
	'{'            reduce using rule 61
	','            reduce using rule 61
	';'            reduce using rule 61
	".."           reduce using rule 61
	%eof           reduce using rule 61


State 40

	logicOrExp -> logicAndExp . "||" logicOrExp         (rule 65)
	logicOrExp -> logicAndExp .                         (rule 66)

	dafny          reduce using rule 66
	"method"       reduce using rule 66
	"ensures"      reduce using rule 66
	"requires"     reduce using rule 66
	"separates"    reduce using rule 66
	"invariant"    reduce using rule 66
	"||"           shift, and enter state 101
	')'            reduce using rule 66
	']'            reduce using rule 66
	'{'            reduce using rule 66
	','            reduce using rule 66
	';'            reduce using rule 66
	".."           reduce using rule 66
	%eof           reduce using rule 66


State 41

	logicAndExp -> cmpExpr . "&&" logicAndExp           (rule 67)
	logicAndExp -> cmpExpr .                            (rule 68)

	dafny          reduce using rule 68
	"method"       reduce using rule 68
	"ensures"      reduce using rule 68
	"requires"     reduce using rule 68
	"separates"    reduce using rule 68
	"invariant"    reduce using rule 68
	"||"           reduce using rule 68
	"&&"           shift, and enter state 100
	')'            reduce using rule 68
	']'            reduce using rule 68
	'{'            reduce using rule 68
	','            reduce using rule 68
	';'            reduce using rule 68
	".."           reduce using rule 68
	%eof           reduce using rule 68


State 42

	cmpExpr -> arithExpr . cmp arithExpr                (rule 69)

	'<'            shift, and enter state 95
	'>'            shift, and enter state 96
	"=="           shift, and enter state 97
	">="           shift, and enter state 98
	"<="           shift, and enter state 99

	cmp            goto state 94

State 43

	expr -> atomic .                                    (rule 49)
	arithExpr -> atomic . arith arithExpr               (rule 75)
	arithExpr -> atomic .                               (rule 76)

	dafny          reduce using rule 49
	"method"       reduce using rule 49
	"ensures"      reduce using rule 49
	"requires"     reduce using rule 49
	"separates"    reduce using rule 49
	"invariant"    reduce using rule 49
	'+'            shift, and enter state 90
	'-'            shift, and enter state 91
	'*'            shift, and enter state 92
	'\%'           shift, and enter state 93
	')'            reduce using rule 49
	'<'            reduce using rule 76
	'>'            reduce using rule 76
	']'            reduce using rule 49
	'{'            reduce using rule 49
	','            reduce using rule 49
	';'            reduce using rule 49
	"=="           reduce using rule 76
	">="           reduce using rule 76
	"<="           reduce using rule 76
	".."           reduce using rule 49
	%eof           reduce using rule 49

	arith          goto state 89

State 44

	atomic -> digits .                                  (rule 81)

	dafny          reduce using rule 81
	"method"       reduce using rule 81
	"ensures"      reduce using rule 81
	"requires"     reduce using rule 81
	"separates"    reduce using rule 81
	"invariant"    reduce using rule 81
	"||"           reduce using rule 81
	"&&"           reduce using rule 81
	'+'            reduce using rule 81
	'-'            reduce using rule 81
	'*'            reduce using rule 81
	'\%'           reduce using rule 81
	')'            reduce using rule 81
	'<'            reduce using rule 81
	'>'            reduce using rule 81
	']'            reduce using rule 81
	'{'            reduce using rule 81
	','            reduce using rule 81
	';'            reduce using rule 81
	"=="           reduce using rule 81
	">="           reduce using rule 81
	"<="           reduce using rule 81
	".."           reduce using rule 81
	%eof           reduce using rule 81


State 45

	expr -> "not" . atomic                              (rule 55)

	digits         shift, and enter state 44
	'('            shift, and enter state 53
	id             shift, and enter state 88

	atomic         goto state 87

State 46

	expr -> "nor" . '(' atomic ',' digits ')'           (rule 56)

	'('            shift, and enter state 86


State 47

	qops -> "H" .                                       (rule 62)

	dafny          reduce using rule 62
	"method"       reduce using rule 62
	"ensures"      reduce using rule 62
	"requires"     reduce using rule 62
	"separates"    reduce using rule 62
	"invariant"    reduce using rule 62
	')'            reduce using rule 62
	']'            reduce using rule 62
	'{'            reduce using rule 62
	','            reduce using rule 62
	';'            reduce using rule 62
	".."           reduce using rule 62
	%eof           reduce using rule 62


State 48

	qops -> "QFT" .                                     (rule 63)

	dafny          reduce using rule 63
	"method"       reduce using rule 63
	"ensures"      reduce using rule 63
	"requires"     reduce using rule 63
	"separates"    reduce using rule 63
	"invariant"    reduce using rule 63
	')'            reduce using rule 63
	']'            reduce using rule 63
	'{'            reduce using rule 63
	','            reduce using rule 63
	';'            reduce using rule 63
	".."           reduce using rule 63
	%eof           reduce using rule 63


State 49

	qops -> "RQFT" .                                    (rule 64)

	dafny          reduce using rule 64
	"method"       reduce using rule 64
	"ensures"      reduce using rule 64
	"requires"     reduce using rule 64
	"separates"    reduce using rule 64
	"invariant"    reduce using rule 64
	')'            reduce using rule 64
	']'            reduce using rule 64
	'{'            reduce using rule 64
	','            reduce using rule 64
	';'            reduce using rule 64
	".."           reduce using rule 64
	%eof           reduce using rule 64


State 50

	expr -> "repr" . '(' range ')'                      (rule 60)

	'('            shift, and enter state 85


State 51

	expr -> "meas" . id                                 (rule 54)

	id             shift, and enter state 84


State 52

	expr -> "λ" . '(' id "=>" expr ')'                  (rule 57)
	expr -> "λ" . '(' pbinder '~' id "=>" pspec expr ')'    (rule 58)

	'('            shift, and enter state 83


State 53

	atomic -> '(' . expr ')'                            (rule 83)

	digits         shift, and enter state 44
	"not"          shift, and enter state 45
	"nor"          shift, and enter state 46
	"H"            shift, and enter state 47
	"QFT"          shift, and enter state 48
	"RQFT"         shift, and enter state 49
	"repr"         shift, and enter state 50
	"meas"         shift, and enter state 51
	"λ"            shift, and enter state 52
	'('            shift, and enter state 53
	'{'            shift, and enter state 54
	id             shift, and enter state 55
	'_'            shift, and enter state 56

	spec           goto state 36
	expr           goto state 82
	qops           goto state 38
	logicOrExp     goto state 39
	logicAndExp    goto state 40
	cmpExpr        goto state 41
	arithExpr      goto state 42
	atomic         goto state 43

State 54

	spec -> '{' . partition ':' qty "↦" tuple__qspec__ '}'    (rule 38)
	spec -> '{' . partition ':' qty "↦" qspec '}'       (rule 39)
	expr -> '{' . partition '}'                         (rule 52)

	'}'            reduce using rule 93
	id             shift, and enter state 60
	':'            reduce using rule 93

	partition      goto state 81
	range          goto state 58
	manyComma__range__goto state 59

State 55

	expr -> id . tuple__expr__                          (rule 59)
	atomic -> id .                                      (rule 82)

	dafny          reduce using rule 82
	"method"       reduce using rule 82
	"ensures"      reduce using rule 82
	"requires"     reduce using rule 82
	"separates"    reduce using rule 82
	"invariant"    reduce using rule 82
	'+'            reduce using rule 82
	'-'            reduce using rule 82
	'*'            reduce using rule 82
	'\%'           reduce using rule 82
	'('            shift, and enter state 80
	')'            reduce using rule 82
	'<'            reduce using rule 82
	'>'            reduce using rule 82
	']'            reduce using rule 82
	'{'            reduce using rule 82
	','            reduce using rule 82
	';'            reduce using rule 82
	"=="           reduce using rule 82
	">="           reduce using rule 82
	"<="           reduce using rule 82
	".."           reduce using rule 82
	%eof           reduce using rule 82

	tuple__expr__  goto state 79

State 56

	expr -> '_' .                                       (rule 50)

	dafny          reduce using rule 50
	"method"       reduce using rule 50
	"ensures"      reduce using rule 50
	"requires"     reduce using rule 50
	"separates"    reduce using rule 50
	"invariant"    reduce using rule 50
	')'            reduce using rule 50
	']'            reduce using rule 50
	'{'            reduce using rule 50
	','            reduce using rule 50
	';'            reduce using rule 50
	".."           reduce using rule 50
	%eof           reduce using rule 50


State 57

	cond -> "separates" partition .                     (rule 10)

	dafny          reduce using rule 10
	"method"       reduce using rule 10
	"ensures"      reduce using rule 10
	"requires"     reduce using rule 10
	"separates"    reduce using rule 10
	"invariant"    reduce using rule 10
	'{'            reduce using rule 10
	%eof           reduce using rule 10


State 58

	manyComma__range__ -> range . ',' manyComma__range__    (rule 94)

	','            shift, and enter state 78


State 59

	partition -> manyComma__range__ .                   (rule 36)

	dafny          reduce using rule 36
	"method"       reduce using rule 36
	"ensures"      reduce using rule 36
	"requires"     reduce using rule 36
	"separates"    reduce using rule 36
	"invariant"    reduce using rule 36
	"split"        reduce using rule 36
	')'            reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36
	':'            reduce using rule 36
	"*="           reduce using rule 36
	%eof           reduce using rule 36


State 60

	range -> id . '[' expr ".." expr ']'                (rule 37)

	'['            shift, and enter state 77


State 61

	cond -> "requires" expr .                           (rule 7)

	dafny          reduce using rule 7
	"method"       reduce using rule 7
	"ensures"      reduce using rule 7
	"requires"     reduce using rule 7
	"separates"    reduce using rule 7
	"invariant"    reduce using rule 7
	'{'            reduce using rule 7
	%eof           reduce using rule 7


State 62

	cond -> "ensures" expr .                            (rule 8)

	dafny          reduce using rule 8
	"method"       reduce using rule 8
	"ensures"      reduce using rule 8
	"requires"     reduce using rule 8
	"separates"    reduce using rule 8
	"invariant"    reduce using rule 8
	'{'            reduce using rule 8
	%eof           reduce using rule 8


State 63

	many__cond__ -> cond many__cond__ .                 (rule 86)

	dafny          reduce using rule 86
	"method"       reduce using rule 86
	'{'            reduce using rule 86
	%eof           reduce using rule 86


State 64

	opt__block__ -> block .                             (rule 96)

	dafny          reduce using rule 96
	"method"       reduce using rule 96
	%eof           reduce using rule 96


State 65

	toplevel -> "method" id '(' bindings ')' conds opt__block__ .    (rule 5)

	dafny          reduce using rule 5
	"method"       reduce using rule 5
	%eof           reduce using rule 5


State 66

	block -> '{' . stmts '}'                            (rule 23)

	dafny          shift, and enter state 71
	"for"          shift, and enter state 72
	"var"          shift, and enter state 73
	"if"           shift, and enter state 74
	"assert"       shift, and enter state 75
	'}'            reduce using rule 87
	id             shift, and enter state 76
	"*="           reduce using rule 93

	stmts          goto state 67
	stmt           goto state 68
	partition      goto state 69
	range          goto state 58
	many__stmt__   goto state 70
	manyComma__range__goto state 59

State 67

	block -> '{' stmts . '}'                            (rule 23)

	'}'            shift, and enter state 137


State 68

	many__stmt__ -> stmt . many__stmt__                 (rule 88)

	dafny          shift, and enter state 71
	"for"          shift, and enter state 72
	"var"          shift, and enter state 73
	"if"           shift, and enter state 74
	"assert"       shift, and enter state 75
	'}'            reduce using rule 87
	id             shift, and enter state 76
	"*="           reduce using rule 93

	stmt           goto state 68
	partition      goto state 69
	range          goto state 58
	many__stmt__   goto state 136
	manyComma__range__goto state 59

State 69

	stmt -> partition . "*=" expr ';'                   (rule 30)

	"*="           shift, and enter state 135


State 70

	stmts -> many__stmt__ .                             (rule 24)

	'}'            reduce using rule 24


State 71

	stmt -> dafny .                                     (rule 25)

	dafny          reduce using rule 25
	"for"          reduce using rule 25
	"var"          reduce using rule 25
	"if"           reduce using rule 25
	"assert"       reduce using rule 25
	'}'            reduce using rule 25
	id             reduce using rule 25
	"*="           reduce using rule 25


State 72

	stmt -> "for" . id "in" '[' expr ".." expr ']' "with" guardExpr conds block    (rule 32)

	id             shift, and enter state 134


State 73

	stmt -> "var" . binding ';'                         (rule 27)
	stmt -> "var" . binding ":=" expr ';'               (rule 28)

	id             shift, and enter state 14

	binding        goto state 133

State 74

	stmt -> "if" . '(' guardExpr ')' cond block         (rule 31)

	'('            shift, and enter state 132


State 75

	stmt -> "assert" . expr ';'                         (rule 26)
